...
    <string name="password">Password</string>
    <string name="loading_data">Loading user data …</string>
    <string name="welcome">Welcome %s !</string>
    <string name="almost_there">Almost there !</string>
    <string name="signOut">Sign Out</string>
    <string name="loggedOut">Logged out.</string>
    <string name="no_tracks">Oops! There are no tracks nearby</string>
    <string name="no_follow">Try following someone!</string>
    <string name="no_favorite">Try adding a track to your favorite!</string>
    <string name="no_favorites_and_likes">Like some tracks and add them to your favorites for better guess!</string>
    <string name="no_created_self">Try creating a track!</string>
    <string name="no_created_other">This user did not create a track yet!</string>
    <string name="add_photo">Photo</string>
...
    <string name="difficulty_is">"Difficulty is "</string>
    <string name="types" translatable="false">Types</string>
    <string name="choose_types">Choose the types of the track</string>
    <string name="default_time">Default run time was chosen</string>
    <string name="dismiss">Dismiss</string>
    <string name="noFilter">Do not filter</string>
    <string name="OK">OK</string>
    <string name="by">by %s</string>
    <string name="duration">Duration: %.2f minutes</string>
    <string name="distance">Distance: %.2f meters</string>
    <string name="difficulty">Difficulty: %.2f / 5.00</string>
    <string name="max_difficulty_of">At most a difficulty of </string>
    <string name="max_time_of">At most </string>
    <string name="no_time_limit">No time limitations</string>
    <string name="no_track_found">No track is called %s!</string>
    <string name="and">and</string>
    <string name="comment_hint">Write an awesome comment in less than %d characters!</string>
    <string name="comment_too_long">"Your comment is too long!"</string>
    <string name="no_user_found">No user is called %s!</string>
    <string name="search_users">Currently search for: users</string>
    <string name="search_tracks">Currently search for: tracks</string>
    <string name="prop_miss">Missing properties, try again!</string>
    <string name="feedback_exists">You\'ve already given a feedback</string>


...
    <string name="want_to_delete_your_account">Do you want to delete your account ?</string>
    <string name="logout">Log out</string>
    <string name="explanation_popup">Welcome to RunPharaa!\nHere are some tips and tricks to use the app:\n\n- You can create a track by pressing the + button!\n\n- On the map, you can change your location by long pressing anywhere in it!\n\n- You can go back to your actual location by clicking on the orange pin and chose "Get me to my location"!\n\n- Press anywhere on this popup window to close i
    </string>
    <string name="report">To send a report to one of our developers, please write to:\n\nrun.PHARAA.sweng@gmail.com\n\nThank you for making runPHARAA a better app!</string>
    <string name="help">Help</string>
    <string name="popup_description">help_popup</string>
    <string name="report_description">report_popup</string>
    <string name="get_me_to_my_location">Get me to my location</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="name">Name</string>
    <string name="comments">Comments</string>
...
