<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item android:id="@+id/filterIcon"
        android:icon="@drawable/ic_filter"
        android:title="@string/filters"
        app:showAsAction="always" />

    <item android:id="@+id/profileIcon"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item android:id="@+id/mapIcon"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="always" />

    <item android:id="@+id/helpIcon"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help"
        app:showAsAction="always" />

</menu>