<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

        <TextView
            android:id="@+id/maxDifficultyOf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/difficulty_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="3" />

        <TextView
            android:id="@+id/maxTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/timeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="120"
            android:progress="60"
            android:visibility="visible" />

    </LinearLayout>
</ScrollView>