<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item android:id="@+id/luckyIcon"
        android:icon="@drawable/ic_casino_black_24dp"
        android:title="Lucky"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchIcon"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item android:id="@+id/filterIcon"
        android:icon="@drawable/ic_filter"
        android:title="@string/filters"
        app:showAsAction="always" />

</menu>